[gd_scene load_steps=3 format=3 uid="uid://d0cxx168q8shn"]

[ext_resource type="Script" uid="uid://tnkjjxmqfjx" path="res://scenes/preferences.gd" id="1_gyaf3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xl0yi"]

[node name="Preferences" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.5342193, 0.5208286, 1)
script = ExtResource("1_gyaf3")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 52
text = "Preferences"
horizontal_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32
theme_override_styles/separator = SubResource("StyleBoxEmpty_xl0yi")

[node name="VolumeTitle" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Volume"
horizontal_alignment = 1

[node name="VolumeSlider" type="HSlider" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.1
value = 0.5

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32
theme_override_styles/separator = SubResource("StyleBoxEmpty_xl0yi")

[node name="ScreenTitle" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Screen"
horizontal_alignment = 1

[node name="FullScreenBox" type="CheckBox" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Full Screen"
alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32
theme_override_styles/separator = SubResource("StyleBoxEmpty_xl0yi")

[node name="BackButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 26
text = "Back"

[connection signal="value_changed" from="CenterContainer/VBoxContainer/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="toggled" from="CenterContainer/VBoxContainer/FullScreenBox" to="." method="_on_full_screen_box_toggled"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
